# nlp-stock-analysis

./: .gitignore  README.md  installation.bash  notebook.ipynb  pyproject.toml
nlp_stock_analysis/: __init__.py  __main__.py
