[project]
name = "nlp-stock-analysis"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "ninest", email = "parth.kabra@gmail.com"},
]
dependencies = [
    "ipykernel>=6.29.3",
    "GoogleNews>=1.6.13",
    "textblob>=0.18.0.post0",
    "openai>=1.14.0",
    "transformers[torch]>=4.38.2",
]
requires-python = ">=3.8"
readme = "README.md"
license = {text = "MIT"}

[tool.pdm.scripts]
main = "python -m nlp_stock_analysis"

[tool.pdm]
distribution = false
